# VOLUNDR

./: .gitignore  AGENTS.md  config.yaml  length_analysis.py  pyproject.toml  tags_frequency.md  tags_shortlist.md
_docs/: decisions-digest-to-elaborate.md  project-context.md  walkthrough.md
src/volundr/: cli.py  config.py  frontmatter.py  harvest.py  models.py  naming.py  pipeline.py  report.py  splitter.py  vault.py
src/volundr/sources/: __init__.py  base.py  capacities.py  notion.py
tests/: conftest.py  test_frontmatter.py  test_frontmatter_renderer.py  test_harvest.py  test_naming.py  test_pipeline.py  test_sources.py  test_splitter.py
